[package]
name = "chatgpt_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
base64 = "0.21.5"
cbc = "0.1.2"
digest = "0.10.7"
rand_core = "0.6.4"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = "1.0.192"
sha2 = "0.10.8"
