[package]
name = "chatgpt_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
base64 = "0.21.5"
cbc = "0.1.2"
digest = "0.10.7"
dotenv = "0.15.0"
rand_core = "0.6.4"
reqwest = { version = "0.11.22", features = ["json"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = "1.0.192"
sha2 = "0.10.8"
tokio = { version = "1.34.0", features = ["full"] }
ttl_cache = "0.5.1"
